--- a/custom_components/icloud3/ChangeLog.txt
+++ b/custom_components/icloud3/ChangeLog.txt
@@ -1,9 +1,16 @@
+pr1.5
+...............................
+1. Bug Fix - Fixed the error causing the "AttributeError: 'iCloud3_Device' object has no attribute 'interval_secs' message at line 680, in determine_interval_after_error" error.
+2. China Users - Added an option to the Configure Settings - iCloud Account & iOS App Data Sources screen to enable the '.cn. Apple Web Server URL address suffix
+
+
 pr1.4
 ...............................
 1. Bug Fix - Fixes a "type object 'GlobalVariables' has no attribute 'this_update_tine'" error. it should be '_time', not '_tine'
 2. Fixed a problem adding the first device to a new iCloud3 installation that was generating a 'TypeError: 'NoneType' object is not callable -- Gb.async_add_entities_device_tracker(NewDeviceTrackers, True) error message.
 3. Stationary zones - Stationary zones are now removed from HA Zones instead of moving them back to their 'base' location when all of the devices have exited the zone. Monitored devices will no longer create a stationary zone since they are not actually tracked.
 4. Error handling - If a device goes offline for an extended period of time (in Airplane mode) the longest interval was changed from 2-hours to 1-hour. An iOS App Location Request will be made when the interval time changes to see if the device is now available for tracking.
+5. China - Fixed a problem updating the Apple Web Server URL for China. This uses the HA Country Code or the Configuration File _icloud_server_endpoint_suffix: "cn"_ parameter to add _.cn_ to the  https://www.icloud.com and https://setup.icloud.com URLs in the iCloud3-iCloud Account interface module.
 
 
 
