--- a/custom_components/icloud3/ChangeLog.txt
+++ b/custom_components/icloud3/ChangeLog.txt
@@ -1,4 +1,13 @@
-rc10
+rc10.1 1/27/2024
+...............................
+1. BUG FIXES:
+    - Fixed an AttributeError: 'NoneType' object has no attribute 'next_update_secs' error message
+    - Fixed an 'UnboundLocalError: cannot access local variable 'from_zone' error message
+2. All distances in the Event Log are now displayed in miles/feet or kilometers/meters based on the parameter settings.
+3. Code cleanup
+
+
+rc10 1/21/2024
 ...............................
 1. NEARBY DEVICES - Changed the distance to another device routine so it would not calculate the distance to 'itself', which is always 0.
 2. WAZE HISTORY MAP - Fixed a problem displaying the Waze History gps locations on a map.
